# aleph3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
build-sdk/: DartConfiguration.tcl
build-test/: DartConfiguration.tcl
docs/: aleph3_unified_plan.md  algebra_supported_subset.md  architecture.md  class_collaboration.md  contract_test_matrix.md  current_engine_audit.md  embedded_formula_engine_design.md  embedded_formula_engine_implementation_plan.md  header_documentation_guideline.md  kernel_assumptions_spec.md  kernel_attribute_spec.md  kernel_design_spec.md  kernel_diagnostic_taxonomy.md  kernel_evaluation_context.md  kernel_exact_algebra_spec.md  kernel_execution_bridge_spec.md  kernel_refactor_backlog.md  kernel_refactor_urgent_plan.md  kernel_registration_interfaces.md  kernel_registration_lifecycle_spec.md  kernel_representation_decision.md  kernel_rewrite_spec.md  kernel_symbol_definition_precedence.md  kernel_symbol_model_spec.md  layer_ownership_matrix.md  main.tex  representation_gap_inventory.md  representation_lowering_strategy.md  style_guide.md  symbolic_core_architecture.md  symbolic_core_gap_analysis.md  symbolic_engine_product_plan.md  symbolic_evaluator_cleanup_plan.md  system_architecture.md  trusted_subset_v1.md
docs/rewrite/: README.md  build_and_targets.md  migration_notes.md  stable_interfaces.md  testing_strategy.md
docs/sdk/: README.md  build_and_targets.md  math_core_audit.md  migration_notes.md  stable_interfaces.md  testing_strategy.md
examples/: rewrite_sdk_host_example.cpp
include/: Constants.hpp  ExtraMath.hpp
include/algebra/: ExactPolynomial.hpp  PolyUtils.hpp  Polynomial.hpp
include/evaluator/: BuiltInFunctions.hpp  EvaluationContext.hpp  Evaluator.hpp  EvaluatorAlgebra.hpp  EvaluatorBuiltins.hpp  EvaluatorErrors.hpp  EvaluatorFunctions.hpp  EvaluatorSemantics.hpp  EvaluatorSpecialForms.hpp  FunctionRegistry.hpp  GammaUtils.hpp  SimplificationRules.hpp
include/expr/: Expr.hpp  ExprUtils.hpp  FullForm.hpp
include/frontend/: Lexer.hpp  Parser.hpp  Token.hpp
include/help/: HelpTexts.hpp
include/ir/: Node.hpp
include/kernel/: Assumptions.hpp  Diagnostics.hpp  EvaluationContext.hpp  FunctionRegistry.hpp  Lowering.hpp  Rewrite.hpp  SymbolAttributes.hpp  TrustedSubsetBridge.hpp
include/normalizer/: Normalizer.hpp
include/packs/: AlgebraPack.hpp  PackRegistry.hpp
include/parser/: Parser.hpp
include/poly/: Polynomial.hpp
include/runtime/: Evaluator.hpp
include/sdk/: Engine.hpp  Policy.hpp  Schema.hpp  Types.hpp
include/semantics/: Validator.hpp
include/symbols/: SymbolState.hpp
include/tooling/: DemoHostFunctions.hpp  RewriteCliSupport.hpp  SymbolicCliSupport.hpp
include/transforms/: Expand.hpp  Transforms.hpp
include/util/: ExprUtils.hpp  Logging.hpp  Overloaded.hpp  Utils.hpp
src/: main.cpp
src/algebra/: PolyUtils.cpp  Polynomial.cpp
src/evaluator/: BuiltInFunctions.cpp  Evaluator.cpp  EvaluatorAlgebra.cpp  EvaluatorBuiltins.cpp  EvaluatorErrors.cpp  EvaluatorFunctions.cpp  EvaluatorSemantics.cpp  EvaluatorSpecialForms.cpp  GammaUtils.cpp  SimplificationRules.cpp
src/expr/: Expr.cpp
src/frontend/: Lexer.cpp  Parser.cpp
src/kernel/: Assumptions.cpp  Lowering.cpp  Rewrite.cpp  SymbolAttributes.cpp  TrustedSubsetBridge.cpp
src/packs/: AlgebraPack.cpp
src/poly/: PolyUtils.cpp  Polynomial.cpp
src/runtime/: Evaluator.cpp
src/sdk/: Engine.cpp
src/semantics/: Validator.cpp
src/tooling/: DemoHostFunctions.cpp  RewriteCliSupport.cpp  SymbolicCliSupport.cpp  aleph3_cli.cpp  rewrite_cli.cpp
src/transforms/: Expand.cpp  Transforms.cpp
tests/: EvaluatorFunctionsTests.cpp  EvaluatorRationalTests.cpp  EvaluatorTests.cpp  ExpandTests.cpp  ExprPrettyPrintTests.cpp  FullFormTests.cpp  GlobalTestSetup.cpp  NormalizerTests.cpp  ParserFunctionsTests.cpp  ParserRationalTests.cpp  ParserTests.cpp  SimplifyTests.cpp  SymbolicCliSupportTests.cpp
tests/algebra/: PolynomialAdditionTests.cpp  PolynomialExprConversionTests.cpp  PolynomialFunctionTests.cpp  PolynomialMultiplicationTests.cpp  PolynomialTestHelpers.hpp  PolynomialTests.cpp  PolynomialUnivariateTests.cpp
tests/evaluator/: ArchitectureMigrationTests.cpp  EvaluatorComplexTests.cpp  EvaluatorFunctionsTests.cpp  EvaluatorRationalTests.cpp  EvaluatorTests.cpp
tests/frontend/: LexerTests.cpp  ParserTests.cpp
tests/ir/: NodeTests.cpp
tests/packs/: AlgebraPackTests.cpp  README.md
tests/parser/: ParserComplexTests.cpp  ParserIdentifierTests.cpp  ParserMatchTests.cpp  ParserRationalTests.cpp  ParserSymbolTests.cpp  ParserTestHelper.hpp  ParserTests.cpp
tests/runtime/: EvaluatorTests.cpp
tests/sdk/: EngineTests.cpp  TypesTests.cpp
tests/semantics/: ValidatorTests.cpp
tests/tooling/: Aleph3CliTests.cpp  DemoHostFunctionsTests.cpp  RewriteCliSupportTests.cpp
